--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,19 +5,27 @@
 
     <body>
 
-    <header>
+        <header>
 
-        <h1>Doggy Daycare</h1>
+            <h1>Doggy Daycare</h1>
 
-        <ul>
-            <li>Dogs</li>
-            <li>Owners</li>
-        </ul>
+            <ul>
+                <li><a href="/">Index</a></li>
+                <li><a href="/dogs">Dogs</a></li>
+                <li><a href="/owners">Owners</a></li>
+            </ul>
 
-    </header>
+        </header>
 
-        <%= yield%>
+            <%= yield%>
+
+        <footer>
+
+            <p>~ Footer space ~</p>
+
+        </footer>
+
 
     </body>
-    
+
 </html>
